[gd_scene load_steps=19 format=3 uid="uid://bigfrcthsqmqp"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_b2vu8"]
[ext_resource type="Texture2D" uid="uid://b27iycarrg5t2" path="res://board/sprites/board1.png" id="1_j8wqy"]
[ext_resource type="Texture2D" uid="uid://jofrcpaakt3a" path="res://board/sprites/board2.png" id="2_8nqu4"]
[ext_resource type="Texture2D" uid="uid://cp21cc4l0bi3w" path="res://board/sprites/board3.png" id="3_b25dq"]
[ext_resource type="Texture2D" uid="uid://n72b5agv2obj" path="res://board/sprites/board4.png" id="4_4m60j"]
[ext_resource type="Texture2D" uid="uid://bgv60j8nk6pd0" path="res://board/sprites/board5.png" id="5_7aup1"]
[ext_resource type="Texture2D" uid="uid://ontqs8ca2pbd" path="res://board/sprites/board6.png" id="6_xg8om"]
[ext_resource type="Texture2D" uid="uid://c5e84squw6xk" path="res://resources/buttons/menu/menu_1.png" id="7_ss07b"]
[ext_resource type="Texture2D" uid="uid://buvkfxac3dta3" path="res://resources/buttons/menu/menuPressed_1.png" id="8_4ah6i"]
[ext_resource type="Texture2D" uid="uid://dv6xn18i76wd" path="res://resources/buttons/menu/menu_2.png" id="11_tytk6"]
[ext_resource type="Texture2D" uid="uid://ccn11k5e1l15f" path="res://resources/buttons/menu/menuPressed_2.png" id="12_hcknt"]
[ext_resource type="FontFile" uid="uid://cfachjkk2umhy" path="res://resources/fonts/Helvetica Black Condensed.otf" id="13_ppn8r"]
[ext_resource type="FontFile" uid="uid://ckxk3elimfey3" path="res://resources/fonts/Kaph-Regular.otf" id="15_waa75"]
[ext_resource type="Texture2D" uid="uid://cnsg578c6nbsk" path="res://resources/buttons/menu/menu_6.png" id="16_t3v2g"]
[ext_resource type="Texture2D" uid="uid://ctiarsh4a61cb" path="res://resources/buttons/menu/menuPressed_6.png" id="17_kamdl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g1243"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j8wqy")
}, {
"duration": 1.0,
"texture": ExtResource("2_8nqu4")
}, {
"duration": 1.0,
"texture": ExtResource("3_b25dq")
}, {
"duration": 1.0,
"texture": ExtResource("4_4m60j")
}, {
"duration": 1.0,
"texture": ExtResource("5_7aup1")
}, {
"duration": 1.0,
"texture": ExtResource("6_xg8om")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Curve" id="Curve_hr00t"]
max_value = 20.0
_data = [Vector2(0.0123457, 20), 0.0, 0.0, 0, 0, Vector2(0.901235, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_j85xb"]
offsets = PackedFloat32Array(0.183962, 0.825472)
colors = PackedColorArray(0.654902, 0.243137, 0.172549, 1, 0.870588, 0.666667, 0.192157, 0.254902)

[node name="menu" type="Node2D"]
z_index = 10
script = ExtResource("1_b2vu8")

[node name="background" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g1243")

[node name="backround_particles" type="CPUParticles2D" parent="."]
amount = 126
emission_shape = 3
emission_rect_extents = Vector2(260, 160)
gravity = Vector2(0, 0)
scale_amount_min = 128.0
scale_amount_max = 128.0
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="menu" type="TextureButton" parent="."]
offset_left = 20.0
offset_top = -156.0
offset_right = 157.0
offset_bottom = -95.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("7_ss07b")
texture_pressed = ExtResource("8_4ah6i")

[node name="Label" type="Label" parent="menu"]
layout_mode = 0
offset_left = 18.6667
offset_top = 20.0
offset_right = 119.667
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("13_ppn8r")
text = "PLAY"
horizontal_alignment = 1

[node name="settings" type="TextureButton" parent="."]
offset_left = 20.0
offset_top = -51.0
offset_right = 157.0
offset_bottom = 10.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("11_tytk6")
texture_pressed = ExtResource("12_hcknt")

[node name="Label" type="Label" parent="settings"]
layout_mode = 0
offset_left = 17.3333
offset_top = 23.3333
offset_right = 118.334
offset_bottom = 53.3333
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("13_ppn8r")
text = "SETTINGS"
horizontal_alignment = 1

[node name="rereoll_label" type="Label" parent="."]
offset_left = -271.0
offset_top = 66.0
offset_right = -76.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0.705882, 0.627451, 0.576471, 1)
theme_override_fonts/font = ExtResource("13_ppn8r")
theme_override_font_sizes/font_size = 21
text = "MENU"
horizontal_alignment = 1

[node name="menu2" type="TextureButton" parent="."]
offset_left = -230.0
offset_top = 101.0
offset_right = -93.0
offset_bottom = 162.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("11_tytk6")
texture_pressed = ExtResource("12_hcknt")

[node name="Label" type="Label" parent="menu2"]
layout_mode = 0
offset_left = 6.24996
offset_top = 12.5
offset_right = 131.25
offset_bottom = 64.5
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("13_ppn8r")
text = "CLICK HERE 
FOR MORE INFO"
horizontal_alignment = 1

[node name="board" type="TextureButton" parent="."]
modulate = Color(0.45098, 0.156863, 0.12549, 1)
offset_left = 38.0
offset_top = 76.0
offset_right = 175.0
offset_bottom = 137.0
scale = Vector2(1.2, 1.2)
texture_normal = ExtResource("16_t3v2g")
texture_pressed = ExtResource("17_kamdl")

[node name="Label" type="Label" parent="."]
offset_left = 61.0
offset_top = 102.0
offset_right = 186.0
offset_bottom = 159.0
theme_override_fonts/font = ExtResource("13_ppn8r")
text = "leaderboard
/death scene"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="controls" type="Label" parent="."]
offset_left = -294.0
offset_top = -158.0
offset_right = -51.0
offset_bottom = -92.0
theme_override_fonts/font = ExtResource("15_waa75")
text = "Left click -> shoot

"
horizontal_alignment = 1

[node name="controls2" type="Label" parent="controls"]
layout_mode = 0
offset_left = -4.0
offset_top = 14.0
offset_right = 239.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("15_waa75")
text = "
Right click -> dash
"
horizontal_alignment = 1

[node name="controls3" type="Label" parent="controls"]
layout_mode = 0
offset_left = -1.0
offset_top = 27.0
offset_right = 249.0
offset_bottom = 115.0
theme_override_fonts/font = ExtResource("15_waa75")
text = "

Space -> Move
"
horizontal_alignment = 1

[node name="controls4" type="Label" parent="controls"]
layout_mode = 0
offset_left = -1.0
offset_top = 27.0
offset_right = 249.0
offset_bottom = 115.0
theme_override_fonts/font = ExtResource("15_waa75")
text = "




P -> restarts game"
horizontal_alignment = 1

[node name="controls5" type="Label" parent="controls"]
layout_mode = 0
offset_left = 10.0
offset_top = 96.0
offset_right = 406.0
offset_bottom = 162.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("15_waa75")
text = "(and stops being rigid after dash)"
horizontal_alignment = 1

[node name="firework_1" type="CPUParticles2D" parent="."]
position = Vector2(-67, -71)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 85
one_shot = true
explosiveness = 0.78
randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
scale_amount_curve = SubResource("Curve_hr00t")
color_ramp = SubResource("Gradient_j85xb")

[node name="firework_2" type="CPUParticles2D" parent="."]
position = Vector2(148, 41)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 85
one_shot = true
explosiveness = 0.78
randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
scale_amount_curve = SubResource("Curve_hr00t")
color_ramp = SubResource("Gradient_j85xb")

[node name="firework_3" type="CPUParticles2D" parent="."]
position = Vector2(-132, 87)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 85
one_shot = true
explosiveness = 0.78
randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
scale_amount_curve = SubResource("Curve_hr00t")
color_ramp = SubResource("Gradient_j85xb")

[node name="firework_4" type="CPUParticles2D" parent="."]
position = Vector2(120, -90)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 85
one_shot = true
explosiveness = 0.78
randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
scale_amount_curve = SubResource("Curve_hr00t")
color_ramp = SubResource("Gradient_j85xb")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="button_up" from="menu" to="." method="_on_menu_button_up"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="menu2" to="." method="_on_menu_2_pressed"]
[connection signal="pressed" from="board" to="." method="_on_board_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
